--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ikigai</title>
+    <title>Nishant Singh</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="DragDropTouchPolyfill.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
