No user scaling for mobile viewport.

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <!--&lt;!&ndash;<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />&ndash;&gt;-->
+    <!--<meta-->
+      <!--name="viewport"-->
+      <!--content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
+    <!--/>-->
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
